<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" 
    android:background="@android:color/darker_gray"   
    android:id="@+id/LinearLayout1"    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salepricecalculatornew.MainActivity" >

   <TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/backColor"
	    android:padding="10dp"
	    android:stretchColumns="1" >
		<TableRow
		     android:layout_weight="1"
		     android:gravity="center_vertical" >
             <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/original_price"
                style="@style/ButtonStyle" />             
             <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/original_price_message"
 			    style="@style/TextStyle" >
             </EditText>
		   </TableRow> 
    	   <TableRow
            	android:layout_weight="1"
            	android:gravity="center_vertical" >
 			 <Button
 			     android:id="@+id/button2"
 			     android:layout_width="wrap_content"
 			     android:layout_height="wrap_content"
 			     android:layout_column="0"
 			     android:layout_weight="1"
 			     android:text="@string/discount"
 			     style="@style/ButtonStyle" /> 	 
 			 <EditText
 			     android:id="@+id/editText2"
 			     android:layout_width="wrap_content"
 			     android:layout_height="wrap_content"
 			     android:layout_weight="1"
 			     android:ems="10"
 			     android:hint="@string/discount_message"
 			     style="@style/TextStyle" />			
	   	</TableRow>
        <TableRow
      	      android:layout_weight="1"
      	      android:gravity="center_vertical" >    
    	  <Button
    	      android:id="@+id/button3"
    	      android:layout_width="wrap_content"
    	      android:layout_height="wrap_content"
    	      android:layout_column="0"
    	      android:layout_weight="1"
    	      android:text="@string/second_discount"
    	      style="@style/ButtonStyle" /> 	
    	  <EditText
    	      android:id="@+id/editText3"
    	      android:layout_width="wrap_content"
    	      android:layout_height="wrap_content"
    	      android:layout_weight="1"
    	      android:ems="10"
    	      android:hint="@string/second_discount_message"
 			  style="@style/TextStyle" />
		</TableRow>
  	    <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical" >  	  
     		<Button
     		    android:id="@+id/button4"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:layout_column="0"
     		    android:layout_weight="1"
     		    android:text="@string/tax"
     		    style="@style/ButtonStyle" />   			
     		<EditText
     		    android:id="@+id/editText4"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:layout_weight="1"
     		    android:ems="10"
     		    android:hint="@string/tax_message"
 			    style="@style/TextStyle" />
		 </TableRow>	
 		 <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical" >    
   		 	<Button
	   		     android:id="@+id/button5"
	   		     android:layout_width="wrap_content"
	   		     android:layout_height="wrap_content"
	   		     android:layout_column="0"
	   		     android:layout_weight="1"
	   		     android:text="@string/final_price"
	   		     style="@style/ButtonStyle" />   		 
   			 <EditText
	   		     android:id="@+id/editText5"
	   		     android:layout_width="wrap_content"
	   		     android:layout_height="wrap_content"
	   		     android:layout_weight="1"
	 	         android:clickable="false" 
			     android:cursorVisible="false" 
			     android:focusable="false" 
			     android:focusableInTouchMode="false"
	   		     android:ems="10"
	   		     android:hint="@string/final_price_message"
	 			 style="@style/TextStyle" />
 		 </TableRow>  	 
 		 <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical" >
 	 	    <Button
	 	        android:id="@+id/button6"
	 	        android:layout_width="wrap_content"
	 	        android:layout_height="wrap_content"
	 	        android:layout_column="0"
	 	        android:layout_weight="1"
	 	        android:text="@string/saved"
	 	        style="@style/ButtonStyle" /> 	   
 	  	    <EditText
	 	         android:id="@+id/editText6"
	 	         android:layout_width="wrap_content"
	 	         android:layout_height="wrap_content"
	 	         android:layout_weight="1" 
	 	         android:clickable="false" 
			     android:cursorVisible="false" 
			     android:focusable="false" 
			     android:focusableInTouchMode="false"
	 	         android:ems="10"
	 	         android:hint="@string/saved_message"
	 			 style="@style/TextStyle" />	        
   		 </TableRow>
     	 <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical" >
          	<Button
	           android:id="@+id/button7"
	           android:layout_width="50dp"
	           android:layout_height="30dp"
	           android:layout_marginLeft="50dp"             
	           android:layout_marginRight="50dp"
	           android:layout_weight="1"
	           android:text="@string/reset"
	           style="@style/ButtonStyle" />
  		 </TableRow>
 	 	<TableRow 
 	     	 android:layout_weight="1"
             android:gravity="center_vertical" >
       	  <Button
             android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_weight="1"
             style="@style/ButtonStyle"
             android:textAppearance="@android:style/TextAppearance.Small"
             android:text="@string/savePage" />
         <Button 
             android:id="@+id/button9"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
             style="@style/ButtonStyle"
             android:textAppearance="@android:style/TextAppearance.Small"
             android:text="@string/showPage"/>
 	   </TableRow>	 
	</TableLayout>

</LinearLayout>
